--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     //FIREBASE
-    implementation platform('com.google.firebase:firebase-bom:31.2.0')
-    implementation platform('com.google.firebase:firebase-firestore:24.4.2')
+    implementation 'com.google.firebase:firebase-bom:31.2.0'
+    implementation 'com.google.firebase:firebase-firestore:24.4.2'
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.firebase:firebase-analytics:21.2.0'
 
