Funciona Archivos y Clientes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity
             android:name=".NuevoArchivo"
             android:exported="false" />
-        <activity
+     <!--  <activity
             android:name=".calendario.EventActivity"
 
             android:name=".EventoDetalle"
@@ -45,7 +45,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
 
-        </activity>
+        </activity>-->
         <activity
             android:name=".EditarGestor"
             android:exported="false">
@@ -111,6 +111,13 @@
         </activity>
         <activity
             android:name=".Recovery"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".DetallesClienteActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
