Añadir Evento hecho

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,12 @@
             android:exported="false" />
      <!--  <activity
             android:name=".calendario.EventActivity"
-
+            android:exported="false" >
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
+        </activity>
+        <activity
             android:name=".EventoDetalle"
             android:exported="false">
             <meta-data
@@ -53,14 +58,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".calendario.EventActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
 
-        </activity> <!-- <activity -->
+        <!-- <activity -->
         <!-- android:name=".Carpetas.ManagerPDF" -->
         <!-- android:exported="false"> -->
         <!-- <meta-data -->
@@ -137,11 +136,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".EventoMain"
