--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,19 +30,23 @@
         android:theme="@style/Theme.FireBaseAD"
         tools:targetApi="31">
         <activity
-
+            android:name=".AgregarArchivo"
+            android:exported="false" />
+        <activity
             android:name=".DescripcionArchivo"
             android:exported="false" />
         <activity
             android:name=".NuevoArchivo"
             android:exported="false" />
-     <!--  <activity
+        <!--
+  <activity
             android:name=".calendario.EventActivity"
             android:exported="false" >
         <meta-data
             android:name="android.app.lib_name"
             android:value="" />
-        </activity>-->
+        </activity>
+        -->
         <activity
             android:name=".EventoDetalle"
             android:exported="false">
@@ -57,9 +61,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-        <!-- <activity -->
+        </activity> <!-- <activity -->
         <!-- android:name=".Carpetas.ManagerPDF" -->
         <!-- android:exported="false"> -->
         <!-- <meta-data -->
@@ -132,21 +134,19 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-
-
-        </activity>
-        <activity
-            android:name=".EventoMain"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".EventoMain"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
