--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         android:theme="@style/Theme.FireBaseAD"
         tools:targetApi="31">
         <activity
+            android:name=".ModificarArchivo"
+            android:exported="false" />
+        <activity
             android:name=".AgregarArchivo"
             android:exported="false" />
         <activity
@@ -53,7 +56,6 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-
         </activity>
         <activity
             android:name=".EditarGestor"
