--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,7 +117,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".GestorMain"
+            android:name=".ClienteMain"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
