--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,13 @@
         android:theme="@style/Theme.FireBaseAD"
         tools:targetApi="31">
         <activity
+            android:name=".FalseRecovery"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AgregarCliente"
             android:exported="false" />
         <activity
@@ -73,8 +80,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-        <!-- <activity -->
+        </activity> <!-- <activity -->
         <!-- android:name=".Carpetas.ManagerPDF" -->
         <!-- android:exported="false"> -->
         <!-- <meta-data -->
@@ -145,6 +151,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -159,7 +166,6 @@
         <activity
             android:name=".EventoMain"
             android:exported="false">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
